# kilowahti-py

./: LICENSE  README.md  pyproject.toml
src/kilowahti/: __init__.py  calc.py  const.py  models.py
src/kilowahti/sources/: __init__.py  spot_hinta.py
tests/: conftest.py  test_calc.py  test_models.py  test_spot_hinta.py
tests/fixtures/: spot_hinta_today_fi.json
