[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kilowahti"
version = "2026.3.0"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]
license = {text = "MIT"}
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "aioresponses>=0.7", "ruff>=0.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/kilowahti"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "C901"]

[tool.ruff.lint.isort]
combine-as-imports = true
